s3:smbd/utmp.c - fix the build on FreeBSD 9 without utmp.h

https://bugzilla.samba.org/show_bug.cgi?id=8709

Reviewed-by: Jelmer

Autobuild-User: Matthias Dieter Wallnöfer <mdw@samba.org>
Autobuild-Date: Thu Feb 23 19:17:25 CET 2012 on sn-devel-104